@@ -92,7 +92,5 @@ Test::Pod = 1.41
 -remove = PodCoverageTests
 -remove = Test::Pod::No404s
 :version = 0.002
-stopwords = Stopwords
-stopwords = KENTNL's
 MetaNoIndex.directory[] = profiles
 Git::GatherDir.include_dotfiles = 1
