@@ -2,3 +2,5 @@
 
 [-Transformer]
 transformer = List
+
+[-StopWords]
