@@ -6,6 +6,8 @@ Revision history for {{$dist->name}}
           - RT mail link cleaned up
           - bump prereqs for Dist::Zilla::Role::PluginBundle::PluginRemover,
             Dist::Zilla::Plugin::Test::CPAN::Changes
+          - document the multiple mechanisms for adding stopwords (and add the
+            [-Stopwords] weaver plugin, which seems to be needed sometimes)
 
 0.002     2013-04-14 15:40:08 PDT-0700 (Karen Etheridge)
           - do not index our profiles/, to avoid its contents from showing up
